--- a/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/core/components/imagery-status/imagery-status.component.less
@@ -58,6 +58,10 @@
 				background: black;
 				border: 1px solid grey;
 				flex: 6;
+				height: 100%;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 			}
 
 			&.small-icon-button {
