--- a/src/app/@ansyn/core/less/colors.less
+++ b/src/app/@ansyn/core/less/colors.less
@@ -9,6 +9,5 @@
 @overlays-dots-color: #d393e1;
 @overlays-dots-color-hover: #bd0fe2;
 @menu-width: 90px;
-@menu-collapsed-width: 30px;
 @menu-color: #2E2D46;
 @timeline-area-height: 110px;
