--- a/src/app/@ansyn/menu/menu/menu.component.less
+++ b/src/app/@ansyn/menu/menu/menu.component.less
@@ -12,6 +12,25 @@ div.menu-wrapper {
 		box-shadow: 0 0 10px black;
 	}
 
+	&.collapsed {
+		div.menu {
+			position: absolute;
+			transform: translateX(-100%);
+			.menu-content {
+				opacity: .5;
+			}
+			.menu-btn {
+			}
+			div.menu-btn i {
+				opacity: 1;
+				font-size: 20px;
+			}
+		}
+		div.container {
+			display: none;
+		}
+	}
+
 	div.menu {
 		position: relative;
 		background: @menu-color;
@@ -20,14 +39,15 @@ div.menu-wrapper {
 		z-index: @z-index-menu;
 		width: @menu-width;
 		height: 100%;
-		transition: width 0.5s;
-
-		&.collapsed {
-			width: @menu-collapsed-width;
-			justify-content: center;
-
-			div.menu-btn i {
-				font-size: 20px;
+		transition: transform .5s;
+		&.expanded {
+			button.hide-menu {
+				transition: 0s;
+				transform: translateX(0);
+				visibility: hidden;
+				i {
+					display: none;
+				}
 			}
 		}
 
@@ -148,11 +168,6 @@ div.menu-wrapper {
 
 	}
 
-	div.hide-menu {
-		width: 100%;
-		margin-bottom: 5px;
-	}
-
 	div.show-menu {
 		width: 100%;
 	}
@@ -161,6 +176,61 @@ div.menu-wrapper {
 @media screen and (max-width: 1400px) {
 	.pin {
 		display: none;
+	}
+}
+
+button.hide-menu {
+	position: absolute;
+	right: 0;
+	transform: translateX(100%);
+	top: calc(~'50% - 110px');
+	height: 60px;
+	background: #2e2d46;
+	border: none;
+	color: white;
+	box-shadow: 2px 0px 4px -2px black;
+	outline: none;
+	visibility: visible;
+	transition: .5s;
+	z-index: 4000;
+	&:hover {
+		background-color: #27B2CF;
+	}
+}
+
+@keyframes collapsed {
+	from {
+		transform: scale(1) translateX(100px);
+	}
+	to {
+		transform: scale(1) translateX(0);
+	}
+}
+
+@keyframes unCollapsed {
+	from {
+		transform: scale(1.2) translateX(-100px);
+	}
+	to {
+		transform: scale(1) translateX(0);
+	}
+}
+
+@keyframes pinned {
+	from {
+		transform: scale(1.1) translateX(-100px);
+	}
+	to {
+		transform: scale(1) translateX(0);
+	}
+}
+
+@keyframes unPinned {
+	from {
+		transform: scale(1) translateX(200px);
+	}
+	to {
+		transform: scale(1) translateX(0);
 	}
 }
 
